--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
@@ -149,7 +149,7 @@
                 </table>
             </div>
             <input type="hidden" id="goPage" name="goPage">
-            <div style="position:absolute;right:2em;bottom:7em;font-size:0.8em">Inline, 3rd Party can skip this step</div>
+            <div style="position:absolute;right:2em;bottom:7em;font-size:0.8em">Inline/ 3rd Party/ brand not Adidas can skip this step</div>
             <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" style="right:7em;" class="button">Back</button>
             <button id="btnNext" onclick="this.form.submitted=this.value;" type="submit" value="Next" style="right:0;" class="button">Next</button>
         </div>
