--- a/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
@@ -532,6 +532,24 @@
             text-align: center;
             vertical-align: middle;
         }
+    .iconPlus {
+        background: url('/Image/Icon/Plus.png')no-repeat center / 80% 80%;
+        height: 1.5vw;
+        width: 1.5vw;
+        vertical-align: middle;
+        cursor: pointer;
+        /*display: block;*/
+        /* Other styles here */
+    }
+
+    .iconReduce {
+        background: url('/Image/Icon/Reduce.png')no-repeat center / 80% 80%;
+        height: 1.5vw;
+        width: 1.5vw;
+        vertical-align: middle;
+        cursor: pointer;
+        /*display: block;*/
+        /* Other styl
 </style>
 
 <div class="main-content">
@@ -1122,7 +1140,7 @@
                         <th>
                             <p idx="SizeCode"></p>
                         </th>
-                        <th>
+                        <th style="width:28vw">
                             <p></p>
                         </th>
                         <th>
@@ -2320,6 +2338,96 @@
         });
     }
 
+    function MeasurementValueEvent(Obj, Action) {
+
+        var Keyidx = $(Obj).attr("KeyIdx");
+        var currentCol = $(`input[idx=SizeSpec][KeyIdx=${Keyidx}]`);
+        var tpye = $(currentCol).attr("type");
+        var oldValue = 0;
+
+        if (Action == "Plus") {
+
+
+            if (tpye == "number") {
+                if ($(currentCol).val() != '') {
+                    oldValue = parseFloat($(currentCol).val());
+                }
+                var newValue = oldValue + 1;
+                $(currentCol).val(newValue).change();
+            }
+            if (tpye == "text") {
+                var newValue = 0;
+                if ($(currentCol).val() != '') {
+
+                    //有分數，例如：1 1/2，把整數位獨立出來+1
+                    if ($(currentCol).val().split(' ').length == 2) {
+                        var interg = $(currentCol).val().split(' ')[0];
+                        var float = $(currentCol).val().split(' ')[1];
+                        var tmp = parseInt(interg) + 1;
+                        newValue = tmp + ` ${float}`;
+
+                    }
+                    else {
+                        // 其餘直接轉成整數
+                        oldValue = parseFloat($(currentCol).val());
+                        newValue = oldValue + 1;
+                    }
+
+                }
+                else {
+                    newValue = oldValue + 1;
+                }
+
+                $(currentCol).val(newValue).change();
+            }
+        }
+        if (Action =="Reduce") {
+
+            if (tpye == "number") {
+
+                if ($(currentCol).val() != '') {
+                    oldValue = parseFloat($(currentCol).val());
+                }
+                var newValue = oldValue - 1;
+                $(currentCol).val(newValue).change();
+            }
+            if (tpye == "text") {
+
+                var newValue = 0;
+                if ($(currentCol).val() != '') {
+
+                    //有分數，例如：1 1/2，把整數位獨立出來-1
+                    if ($(currentCol).val().split(' ').length == 2) {
+                        var interg = $(currentCol).val().split(' ')[0];
+                        var float = $(currentCol).val().split(' ')[1];
+                        var tmp = parseInt(interg) - 1;
+
+                        // 若整數位<=1，新值直接歸0
+                        if (interg <= 1) {
+                            newValue = 0;
+                        }
+                        else {
+                            newValue = tmp + ` ${float}`;
+                        }
+
+                    }
+                    else {
+                        // 其餘直接轉成整數
+                        oldValue = parseFloat($(currentCol).val());
+                        newValue = oldValue - 1;
+                    }
+
+                }
+                else {
+                    newValue = oldValue - 1;
+                }
+
+                $(currentCol).val(newValue).change();
+
+            }
+        }
+    }
+
     function ProductTypeCheck(StyleID, OrderID, Article, Size, ProductType) {
         if (ProductType == null || ProductType == "") {
             return;
@@ -2952,6 +3060,7 @@
                 var thead = "";
                 var SizeUnit = "";
                 var tbody = "";
+                var KeyIdx = 0;
                 $.each(data, function (index, value) {
                     if (thead == "") {
                         thead += "<tr>";
@@ -2960,7 +3069,7 @@
                         thead += "<th><p>Tol(+)</p></th>";
                         thead += "<th><p>Tol(-)</p></th>";
                         thead += "<th><p idx='SizeCode'>" + value.SizeCode + "</p></th>";
-                        thead += "<th><p>" + value.SizeCode + "</p></th>";
+                        thead += "<th style='width: 28vw'><p>" + value.SizeCode + "</p></th>";
                         thead += "<th><p>Diff</p></th>";
                         thead += "</tr>";
 
@@ -2982,14 +3091,15 @@
                     tbody += "<td class='bg-lightgray'><p idx='standard'>" + value.SizeSpec + "</p></td>";
 
                     if (value.SizeUnit.toUpperCase() == "INCH") {
-                        tbody += "<td class='" + bgColor + "'><input type='text' idx='SizeSpec' placeholder= '__ __/__' class='" + bgColor + "' " + readonly + "></td>";
+                        tbody += "<td class='" + bgColor + `'><img class="iconPlus" onclick="MeasurementValueEvent(this,'Plus')" KeyIdx='` + KeyIdx + "' /><input type='text' KeyIdx='" + KeyIdx + "'  idx='SizeSpec' placeholder= '__ __/__' class='" + bgColor + "' " + readonly + "><img KeyIdx='" + KeyIdx + `' class="iconReduce" onclick="MeasurementValueEvent(this,'Reduce')" /></td>`;
                     }
                     else {
-                        tbody += "<td class='" + bgColor + "'><input type='number' idx='SizeSpec' class='" + bgColor + "' " + readonly + "></td>";
+                        tbody += "<td class='" + bgColor + `'><img class="iconPlus" onclick="MeasurementValueEvent(this,'Plus')"' KeyIdx='` + KeyIdx + "' /><input type='number' KeyIdx='" + KeyIdx + "'  idx='SizeSpec' class='" + bgColor + "' " + readonly + "><img KeyIdx='" + KeyIdx + `' class="iconReduce" onclick="MeasurementValueEvent(this,'Reduce')" /></td>`;
                     }
 
                     tbody += "<td><p class='Diff'></p></td>";
                     tbody += "</tr>";
+                    KeyIdx = KeyIdx + 1;
                 });
 
                 $('.MeasurementRowHeader .Unit').html(SizeUnit);
@@ -3063,6 +3173,97 @@
                 console.log(xhr.responseText);
             }
         });
+        /*
+        $(".iconPlus").click(function () {
+            var Keyidx = $(this).attr("KeyIdx");
+            var currentCol = $(`input[idx=ResultSizeSpec][KeyIdx=${Keyidx}]`);
+            var tpye = $(currentCol).attr("type");
+            var oldValue = 0;
+
+            if (tpye == "number") {
+                if ($(currentCol).val() != '') {
+                    oldValue = parseFloat($(currentCol).val());
+                }
+                var newValue = oldValue + 1;
+                $(currentCol).val(newValue).change();
+            }
+            if (tpye == "text") {
+                var newValue = 0;
+                if ($(currentCol).val() != '') {
+
+                    //有分數，例如：1 1/2，把整數位獨立出來+1
+                    if ($(currentCol).val().split(' ').length == 2) {
+                        var interg = $(currentCol).val().split(' ')[0];
+                        var float = $(currentCol).val().split(' ')[1];
+                        var tmp = parseInt(interg) + 1;
+                        newValue = tmp + ` ${float}`;
+
+                    }
+                    else {
+                        // 其餘直接轉成整數
+                        oldValue = parseFloat($(currentCol).val());
+                        newValue = oldValue + 1;
+                    }
+
+                }
+                else {
+                    newValue = oldValue + 1;
+                }
+
+                $(currentCol).val(newValue).change();
+            }
+        });
+
+        $(".iconReduce").click(function () {
+            var Keyidx = $(this).attr("KeyIdx");
+            var currentCol = $(`input[idx=ResultSizeSpec][KeyIdx=${Keyidx}]`);
+            var tpye = $(currentCol).attr("type");
+            var oldValue = 0;
+
+            if (tpye == "number") {
+
+                if ($(currentCol).val() != '') {
+                    oldValue = parseFloat($(currentCol).val());
+                }
+                var newValue = oldValue - 1;
+                $(currentCol).val(newValue).change();
+            }
+            if (tpye == "text") {
+
+                var newValue = 0;
+                if ($(currentCol).val() != '') {
+
+                    //有分數，例如：1 1/2，把整數位獨立出來-1
+                    if ($(currentCol).val().split(' ').length == 2) {
+                        var interg = $(currentCol).val().split(' ')[0];
+                        var float = $(currentCol).val().split(' ')[1];
+                        var tmp = parseInt(interg) - 1;
+
+                        // 若整數位<=1，新值直接歸0
+                        if (interg <= 1) {
+                            newValue = 0;
+                        }
+                        else {
+                            newValue = tmp + ` ${float}`;
+                        }
+
+                    }
+                    else {
+                        // 其餘直接轉成整數
+                        oldValue = parseFloat($(currentCol).val());
+                        newValue = oldValue - 1;
+                    }
+
+                }
+                else {
+                    newValue = oldValue - 1;
+                }
+
+                $(currentCol).val(newValue).change();
+
+            }
+        });
+        */
     }
 
     function MeasurementSave() {
