--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -326,7 +326,7 @@
                                                     }
                                                 </select>
                                             </td>
-                                            <td><h4>Fibre Composition</h4></td>
+                                            <td><h4>Fabric Composition</h4></td>
                                             <td colspan="3">@Html.TextBoxFor(o => Model.Detail.Composition, "", new { @style = "width:100%;" })</td>
                                         </tr>
                                         <tr>
