--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
@@ -90,11 +90,14 @@
             for (var i = 0; i < items.length; i++) {
 
                 if (result[keyCount] == items[i].DefectTypeDesc) {
+
+                    var FinalInspection_DetailImage = items[i].ListFinalInspectionDefectImage;
                     temp.push([
                         items[i].Ukey
                         , items[i].DefectCodeDesc
                         , items[i].Qty
-                        , items[i].ListFinalInspectionDefectImage
+                        //, items[i].ListFinalInspectionDefectImage
+                        , FinalInspection_DetailImage.Image
                         , items[i].RowIndex
                         , items[i].DefectCode
                         , items[i].DefectType
@@ -248,12 +251,14 @@
             var Ukey = Data.DetailUkey;
             var RowIndex = Data.RowIndex;
             var Picture = Data.Img.replace("data:image/png;base64,", "");
+            var Remark = Data.Remark;
 
             var data =
             {
                 Ukey: Ukey,
                 RowIndex: RowIndex,
                 TempImage: Picture,
+                TempRemark: Remark,
             };
 
             $.ajax({
