--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
@@ -150,37 +150,58 @@
     function OpenPicture() {
         window.open('@Url.Action("OthersPicture")?FinalInspectionID=@Model.FinalInspectionID', "Picture", config = 'toolbar=no,status=no,location=no,width=700,height=600');
     }
-    
+
 
     function ScreenShot() {
         window.open('@Url.Action("OthersTakePicture")?FinalInspectionID=@Model.FinalInspectionID', "Picture", config = 'toolbar=no,status=no,location=no,width=700,height=600');
     }
-    
 
-    function GetImage(Data) {
+
+    function GetImage(Data, ImgSource) {
         //透過AJAX暫存成Temp Data
 
-        var FinalInspectionID = Data.FinalInspectionID;
-        var Picture = Data.Img.replace("data:image/png;base64,", "");
+        //根據圖片來源決定存檔方式
+        if (ImgSource == 'Camera') {
+            var FinalInspectionID = Data.FinalInspectionID;
+            var Picture = Data.Img.replace("data:image/png;base64,", "");
 
-        var data =
-        {
-            ID: FinalInspectionID,
-            TempImage: Picture,
-        };
+            var data =
+            {
+                ID: FinalInspectionID,
+                TempImage: Picture,
+                TempRemark: Data.Remark,
+            };
 
-        $.ajax({
-            url: "@Url.Action("AddthersTPicturesTempSave", "Inspection", new { Area = "FinalInspection" })",
-            type: 'POST',
-            contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({ data: data }),
-            async: true,
-            success: function (data) {
-                //msg.WithSuccess("Image OK!!");
-            },
-            error: function (xhr, ajaxOptions, thrownError) {
-                console.log(xhr.responseText);
-            }
-        });
+            $.ajax({
+                url: "@Url.Action("AddthersTPicturesTempSave", "Inspection", new { Area = "FinalInspection" })",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ data: data }),
+                async: true,
+                success: function (data) {
+                    //msg.WithSuccess("Image OK!!");
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
+        }
+        if (ImgSource == 'File') {
+
+            $.ajax({
+                url: "@Url.Action("BatchAddthersTPicturesTempSave", "Inspection", new { Area = "FinalInspection" })",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ list: Data }),
+                async: true,
+                success: function (data) {
+                    //msg.WithSuccess("Image OK!!");
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
+
+        }
     }
 </script>
