--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/Index.cshtml
@@ -134,11 +134,11 @@
 <div class="main-content">
     <header class="page-header">
         <h3>
-            <span>Accessory Oven Test & Wash</span>
+            <span>Accessory Oven & Wash Test</span>
         </h3>
         <div class="breadcrumb">
             <div>Home</div>
-            <div class="current">Accessory Oven Test & Wash</div>
+            <div class="current">Accessory Oven & Wash Test</div>
         </div>
     </header>
     <div class="main-area">
