--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/OvenTest.cshtml
@@ -70,11 +70,11 @@
     <div class="main-content">
         <header class="page-header">
             <h3>
-                <span>Accessory Oven Test & Wash</span>
+                <span>Accessory Oven & Wash Test</span>
             </h3>
             <div class="breadcrumb">
                 <div>Home</div>
-                <div>Accessory Oven Test & Wash</div>
+                <div>Accessory Oven & Wash Test</div>
                 <div class="current">OvenTest</div>
             </div>
         </header>
