--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -381,10 +381,11 @@
         // 摺疊資料需先轉成array
         var adata = [];
         var bdata = [];
+        var SelectedPOs =[];
         var index = 0;
         var index2 = 0;
         var currentStage = '';
-        var Order_AvailableQty = { };
+        var Order_AvailableQty = {};
         var table;
         @foreach (var item in Model.SelectedPO)
         {
@@ -401,7 +402,23 @@
 
             @Html.Raw(Model.ErrorMessage);
 
+            for (var i = 0; i < adata.length; i++) {
+                var obj = {
+                    OrderID: adata[i][1],
+                    Rowindex: adata[i][2],
+                    CustPONO: adata[i][3],
+                    StyleID: adata[i][4],
+                    SeasonID: adata[i][5],
+                    BrandID: adata[i][6],
+                    OrderQty: adata[i][7],
+                    Cartons: adata[i][8],
+                    AvailableQty: adata[i][9],
+                    Seq: adata[i][11],
+                    Article: adata[i][12],
 
+                };
+                SelectedPOs.push(obj);
+            }
 
             $("#SewingLineID").on('click', function () {
                 //window.open('@Url.Action("SewingLineList", "PublicWondow",new { Area=""})' + '?FactoryID=@ViewBag.FactoryID', 'SewingLineList', config = 'toolbar=no,status=no,location=no,width=400,height=650' );
@@ -588,7 +605,7 @@
                 },
             });
 
-            //Select Carton
+            //Select Carton視窗
             $(".to-edit-detail").dialog({
                 width: "70%",
                 dialogClass: "add-contact-box",
@@ -596,7 +613,7 @@
                     "1": {
                         text: 'Next',
                         click: function () {
-
+                            //Select Carton視窗按下Next
                             var checkedList = [];
                             var totalQty = 0;
                             $('[id^=Carton_Select_]').each(function () {
@@ -611,27 +628,24 @@
                             var index = $("#currnetSelectedPO").val();
                             document.getElementById("SelectedPO[" + index + "].Cartons").value = checkedList.join(',');
 
-                            var brandid = $('#BrandID').val();
+                            var orderID = document.getElementById("SelectedPO[" + index + "].AvailableQty").getAttribute("OrderId");
+
+                            //Stage != 'Final'才需要從Carton帶入數量，否則帶入OrderQty
                             if (currentStage != 'Final') {
 
-                                var orderID = document.getElementById("SelectedPO[" + index + "].AvailableQty").getAttribute("OrderId");
                                 document.getElementById("SelectedPO[" + index + "].AvailableQty").value = totalQty;
 
                                 table.row($("#SelectPO_" + orderID).closest('tr')).data()[9] = totalQty;
                                 Order_AvailableQty[orderID] = totalQty;
-                                Cacu_AvailableQty();
+                            }
+                            else {
+                                var OrderQty = document.getElementById("SelectedPO[" + index + "].AvailableQty").getAttribute("OrderQty");
+                                table.row($("#SelectPO_" + orderID).closest('tr')).data()[9] = parseInt(OrderQty);
+                                Order_AvailableQty[orderID] = OrderQty;
                             }
 
-                            /*
-                            if ((currentStage != 'Final' || brandid == "ADIDAS") || brandid != "ADIDAS") {
-                                var orderID = document.getElementById("SelectedPO[" + index + "].AvailableQty").getAttribute("OrderId");
-                                document.getElementById("SelectedPO[" + index + "].AvailableQty").value = totalQty;
+                            Cacu_AvailableQty();
 
-                                table.row($("#SelectPO_" + orderID).closest('tr')).data()[9] = totalQty;
-                                Order_AvailableQty[orderID] = totalQty;
-                                Cacu_AvailableQty();
-                            }
-                            */
                             $(this).dialog("close");
                         }
                         , "class": "button"
@@ -640,6 +654,7 @@
                 },
             });
 
+            //Select ShipmodeSeq 視窗
             $(".to-ShipmodeSeq-detail").dialog({
                 width: "70%",
                 dialogClass: "add-contact-box",
@@ -666,18 +681,6 @@
                             }
 
                             document.getElementById("SelectedPO[" + index + "].Seq").value = checkedList.join(',');
-
-                            var brandid = $('#BrandID').val();
-
-                            if (currentStage == 'Final' && brandid == "ADIDAS") {
-
-                                var orderID = document.getElementById("SelectedPO[" + index + "].AvailableQty").getAttribute("OrderId");
-                                document.getElementById("SelectedPO[" + index + "].AvailableQty").value = totalQty;
-
-                                table.row($("#SelectPO_" + orderID).closest('tr')).data()[9] = totalQty;
-                                Order_AvailableQty[orderID] = totalQty;
-                                Cacu_AvailableQty();
-                            }
 
                             $(this).dialog("close");
                         }
@@ -815,6 +818,7 @@
             $("#SewingLineID").val(sewingLineID);
         }
 
+        //開啟Carton 彈跳視窗
         function open_cartonsDetail(pkey) {
 
             var findValue = pkey.split(',');
@@ -829,8 +833,8 @@
 
             $(".to-edit-detail").dialog("open");
             ShowLoading();
-            
 
+            // Carton的DataTable建立函式
             $("#CartonTable").DataTable({
                 "pageLength": 10,
                 "autoWidth": false,
@@ -873,6 +877,7 @@
 
             $("#CartonTable_filter").hide();
 
+            // 先把所有勾選清掉
             $('[id^=Carton_Select_]').each(function () {
                 $(this).prop('checked', false);
             });
@@ -902,6 +907,7 @@
             NonLoading();
         }
 
+        //開啟ShipmodeSeq 彈跳視窗
         function open_ShipmodeSeq(pkey) {
             var findValue = pkey.split(',');
             var rowIndex;
@@ -934,7 +940,8 @@
 
             $("#ShipmodeSeqTable_filter").hide();
 
-            $('[id^=Carton_Select_]').each(function () {
+            // 先把所有勾選清掉
+            $('[id^=ShipmodeSeq_Select_]').each(function () {
                 $(this).prop('checked', false);
             });
 
@@ -1032,7 +1039,7 @@
                 '<input type="text" style="width:100%" readonly="readonly" onclick="open_cartonsDetail(\'' + d[1] + ',' + d[3] + '\');" name="SelectedPO[' + d[2] + '].Cartons" id="SelectedPO[' + d[2] + '].Cartons" value="' + d[8] + '" OrderID="' + orderID +'" Col="Cartons"/>' +
                 '</td></tr>'+
                 '<tr><td>Available Qty:</td><td style=" text-align: right;" class="OpenDetail" >' +
-                '<input type="number" style="width:100%" name="SelectedPO[' + d[2] + '].AvailableQty" id="SelectedPO[' + d[2] + '].AvailableQty" value="' +
+                '<input type="number" style="width:100%" name="SelectedPO[' + d[2] + '].AvailableQty" id="SelectedPO[' + d[2] + '].AvailableQty" orderQty="' + d[7]+'" value="' +
 
                 `${currentStage == 'Final' ? d[7] : d[9]}`
 
@@ -1064,8 +1071,7 @@
             }
 
             //選擇Inline或Stagger時，會把[AQL Plan]變成唯讀並將內容變為空白，而[Sample Plan Qty]可編輯"
-            if (value == "Inline" || value == "Stagger")
-            {
+            if (value == "Inline" || value == "Stagger") {
                 $('#SampleSize').prop('disabled', false);
                 $('#AcceptQty').prop('disabled', false);
                 $('#RejectQty').prop('disabled', false);
@@ -1073,27 +1079,100 @@
 
             currentStage = value;
 
-            var brandid = $('#BrandID').val();
+            // Stage 改變，Selected PO要執行以下動作：
+            /*
+             * 1. 所有Shipmode Seq、Carton清空
+             * 2. 如果Stage選擇Final，Available Qty直接帶入Order Qty；反之則歸零，然後重新計算最下方的Total Available Qty、右方的AQL Plan
+             */
+
             var availableQtycheck = $('input[col=AvailableQty]');
 
-            if (brandid == 'ADIDAS') {
 
-                if (currentStage == "Final") {
+            //[Shipmode Seq]、[Carton]視窗有開啟的清空方式
+            $.each(SelectedPOs, function (idx) {
 
-                    $.each(availableQtycheck, function () {
-                        $($(this)[0]).attr("readonly", "readonly");
-                    });
+                if (document.getElementById(`SelectedPO[${idx}].Cartons`) != null) {
+                    document.getElementById(`SelectedPO[${idx}].Cartons`).value = "";
                 }
-                else {
-                    $.each(availableQtycheck, function () {
-                        $($(this)[0]).removeAttr("readonly");
-                    });
+                if (document.getElementById(`SelectedPO[${idx}].Seq`) != null) {
+                    document.getElementById(`SelectedPO[${idx}].Seq`).value = "";
                 }
+            });
+
+            // Stage改變，會影響到[Selected PO]區塊裡面每一筆SP#的Available Qty
+            if (currentStage == "Final") {
+
+                // 如果是Final，則AvailableQty自動待入該訂單的Orders.Qty
+
+                // 如果[Selected PO]區塊沒展開，透過以下方式Bind AvailableQty資料
+                $.each(SelectedPOs, function () {
+                    var obj = this;
+                    var orderID = obj.OrderID;;
+                    var orderQty = obj.OrderQty;;
+                    //index9是AvailableQty
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[9] = orderQty;
+                    Order_AvailableQty[orderID] = orderQty;
+
+                    ////index 11是Shipmode seq
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[11] = '';
+                    ////index 8是Cartons
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[8] = '';
+                });
+
+                // 如果[Selected PO]區塊有展開，透過以下方式Bind AvailableQty資料
+                $.each(availableQtycheck, function () {
+                    var orderQty = $($(this)[0]).attr("orderQty");
+                    var orderID = $($(this)[0]).attr("orderID");
+                    $($(this)[0]).val(orderQty);
+                    $($(this)[0]).attr("readonly", "readonly");
+                    //index9是AvailableQty
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[9] = orderQty;
+                    Order_AvailableQty[orderID] = orderQty;
+
+                    ////index 11是Shipmode seq
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[11] = '';
+                    ////index 8是Cartons
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[8] = '';
+                });
+                Cacu_AvailableQty();
             }
             else {
-                $.each(availableQtycheck, function () {
-                    $($(this)[0]).removeAttr("readonly");
+                // 如果不是Final則清空ShipModeSeq、Carton、Available Qty
+
+                // 如果[Selected PO]區塊沒展開，透過以下方式Bind AvailableQty資料
+                $.each(SelectedPOs, function () {
+                    var obj = this;
+                    var orderID = obj.OrderID;
+
+                    //index9是AvailableQty
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[9] = 0;
+                    Order_AvailableQty[orderID] = 0;
+
+                    //index 11是Shipmode seq
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[11] = '';
+                    //index 8是Cartons
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[8] = '';
                 });
+
+                // 如果[Selected PO]區塊有展開，透過以下方式Bind AvailableQty資料
+                $.each(availableQtycheck, function () {
+                    var orderID = $($(this)[0]).attr("orderID");
+                    $($(this)[0]).removeAttr("readonly");
+                    $($(this)[0]).val(0);
+
+                    //index9是AvailableQty
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[9] = 0;
+                    Order_AvailableQty[orderID] = 0;
+
+                    //index 11是Shipmode seq
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[11] = '';
+                    //index 8是Cartons
+                    table.row($(`#SelectPO_${orderID}`).closest('tr')).data()[8] = '';
+
+                });
+
+
+                Cacu_AvailableQty();
             }
             /* ISP20211490 拔掉
 
