--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -616,6 +616,7 @@
                             //Select Carton視窗按下Next
                             var checkedList = [];
                             var totalQty = 0;
+                            $("#CTNSearch").val('').change();
                             $('[id^=Carton_Select_]').each(function () {
 
                                 if ($(this).prop('checked')) {
