--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/TakePicture.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/TakePicture.cshtml
@@ -188,6 +188,7 @@
 
             if (length > 0) {
 
+                $(".FileItem").remove();
                 var idx = 0;
                 $.each(UploadPic.files, function (idx) {
                     $("#FileArea").append(`
