ISP20220316 - Query功能Detail，Setting區的Rejected改成Accepted +1

--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -172,7 +172,7 @@
                         <td>Accepted</td>
                         <td class="valueColor">@Model.FinalInspection.AcceptQty</td>
                         <td>Rejected</td>
-                        <td class="valueColor" style="padding-left:10px;">@Model.FinalInspection.RejectQty</td>
+                        <td class="valueColor" style="padding-left:10px;">@(Model.FinalInspection.AcceptQty+1)</td>
                     </tr>
                 </table>
             </div>
